adopting the current version of https://github.com/janScheible/spring-boot-netbeans-getting-started
- game web-app
- final cleanup and fine-tuning