@@ -1,7 +1,6 @@
 package com.scheible.risingempire.webapp.notification;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -12,8 +11,8 @@ public interface NotificationChannel {
 
 	void sendMessage(String type, Map<String, Object> payload) throws IOException;
 
-	default void sendMessage(final String type) throws IOException {
-		sendMessage(type, Collections.emptyMap());
+	default void sendMessage(String type) throws IOException {
+		sendMessage(type, Map.of());
 	}
 
 }
